==> Samsung/TizenRT/os/arch/arm/src/imxrt/imxrt_irq.c <==
#include <tinyara/config.h>
#include <stdint.h>
#include <debug.h>
#include <tinyara/irq.h>
#include <tinyara/arch.h>
#include <arch/irq.h>
#include "nvic.h"
#include "ram_vectors.h"
#include "up_arch.h"
#include "up_internal.h"
#include "imxrt_gpio.h"
#define DEFPRIORITY32 \
	(NVIC_SYSH_PRIORITY_DEFAULT << 24 | \
	 NVIC_SYSH_PRIORITY_DEFAULT << 16 | \
	 NVIC_SYSH_PRIORITY_DEFAULT << 8  | \
	 NVIC_SYSH_PRIORITY_DEFAULT)
#define NVIC_ENA_OFFSET    (0)
#define NVIC_CLRENA_OFFSET (NVIC_IRQ0_31_CLEAR - NVIC_IRQ0_31_ENABLE)

static int imxrt_irqinfo(int irq, uintptr_t *regaddr, uint32_t *bit, uintptr_t offset)
{
	unsigned int extint = irq - IMXRT_IRQ_EXTINT;

	DEBUGASSERT(irq >= IMXRT_IRQ_NMI && irq < NR_IRQS);

	/* Check for external interrupt */

	if (irq >= IMXRT_IRQ_EXTINT) {
		if (extint < 32) {
			*regaddr = (NVIC_IRQ0_31_ENABLE + offset);
			*bit = 1 << extint;
		} else
#if IMXRT_IRQ_NEXTINT > 32
			if (extint < 64) {
				*regaddr = (NVIC_IRQ32_63_ENABLE + offset);
				*bit = 1 << (extint - 32);
			} else
#endif
#if IMXRT_IRQ_NEXTINT > 64
				if (extint < 96) {
					*regaddr = (NVIC_IRQ64_95_ENABLE + offset);
					*bit = 1 << (extint - 64);
				} else
#endif
#if IMXRT_IRQ_NEXTINT > 96
					if (extint < 128) {
						*regaddr = (NVIC_IRQ96_127_ENABLE + offset);
						*bit = 1 << (extint - 96);
					} else
#endif
#if IMXRT_IRQ_NEXTINT > 128
						if (extint < 160) {
							*regaddr = (NVIC_IRQ128_159_ENABLE + offset);
							*bit = 1 << (extint - 128);
						} else
#endif
#if IMXRT_IRQ_NEXTINT > 160
#error Missing logic
#endif
						{
							return ERROR;		/* Invalid interrupt */
						}
	}

	/* Handle processor exceptions.  Only a few can be disabled */

	else {
		*regaddr = NVIC_SYSHCON;
		if (irq == IMXRT_IRQ_MEMFAULT) {
			*bit = NVIC_SYSHCON_MEMFAULTENA;
		} else if (irq == IMXRT_IRQ_BUSFAULT) {
			*bit = NVIC_SYSHCON_BUSFAULTENA;
		} else if (irq == IMXRT_IRQ_USAGEFAULT) {
			*bit = NVIC_SYSHCON_USGFAULTENA;
		} else if (irq == IMXRT_IRQ_SYSTICK) {
			*regaddr = NVIC_SYSTICK_CTRL;
			*bit = NVIC_SYSTICK_CTRL_ENABLE;
		} else {
			return ERROR;		/* Invalid or unsupported exception */
		}
	}

	return OK;
}

void up_irqinitialize(void)
{
	uintptr_t regaddr;
#if defined(CONFIG_DEBUG_SYMBOLS) && !defined(CONFIG_ARMV7M_USEBASEPRI)
	uint32_t regval;
#endif
	int nintlines;
	int i;

	/* The NVIC ICTR register (bits 0-4) holds the number of of interrupt
	 * lines that the NVIC supports, defined in groups of 32. That is,
	 * the total number of interrupt lines is up to (32*(INTLINESNUM+1)).
	 *
	 *  0 -> 32 interrupt lines, 1 enable register,   8 priority registers
	 *  1 -> 64 "       " "   ", 2 enable registers, 16 priority registers
	 *  2 -> 96 "       " "   ", 3 enable registers, 24 priority registers
	 *  ...
	 */

	nintlines = (getreg32(NVIC_ICTR) & NVIC_ICTR_INTLINESNUM_MASK) + 1;

	/* Disable all interrupts.  There are nintlines interrupt enable
	 * registers.
	 */

	for (i = nintlines, regaddr = NVIC_IRQ0_31_CLEAR; i > 0; i--, regaddr += 4) {
		putreg32(0xffffffff, regaddr);
	}

	/* Make sure that we are using the correct vector table.  The default
	 * vector address is 0x0000:0000 but if we are executing code that is
	 * positioned in SRAM or in external FLASH, then we may need to reset
	 * the interrupt vector so that it refers to the table in SRAM or in
	 * external FLASH.
	 */

	putreg32((uint32_t)_vectors, NVIC_VECTAB);

#ifdef CONFIG_ARCH_RAMVECTORS
	/* If CONFIG_ARCH_RAMVECTORS is defined, then we are using a RAM-based
	 * vector table that requires special initialization.
	 */

	up_ramvec_initialize();
#endif

	/* Set all interrupts (and exceptions) to the default priority */

	putreg32(DEFPRIORITY32, NVIC_SYSH4_7_PRIORITY);
	putreg32(DEFPRIORITY32, NVIC_SYSH8_11_PRIORITY);
	putreg32(DEFPRIORITY32, NVIC_SYSH12_15_PRIORITY);

	/* Now set all of the interrupt lines to the default priority.  There are
	 * nintlines * 8 priority registers.
	 */

	for (i = (nintlines << 3), regaddr = NVIC_IRQ0_3_PRIORITY; i > 0; i--, regaddr += 4) {
		putreg32(DEFPRIORITY32, regaddr);
	}

	/* currents_regs is non-NULL only while processing an interrupt */

	current_regs = NULL;

	/* Attach the SVCall and Hard Fault exception handlers.  The SVCall
	 * exception is used for performing context switches; The Hard Fault
	 * must also be caught because a SVCall may show up as a Hard Fault
	 * under certain conditions.
	 */

	irq_attach(IMXRT_IRQ_SVCALL, up_svcall, NULL);
	irq_attach(IMXRT_IRQ_HARDFAULT, up_hardfault, NULL);

	/* Set the priority of the SVCall interrupt */

#ifdef CONFIG_ARCH_IRQPRIO
	/* up_prioritize_irq(IMXRT_IRQ_PENDSV, NVIC_SYSH_PRIORITY_MIN); */
#endif
#ifdef CONFIG_ARMV7M_USEBASEPRI
	imxrt_prioritize_syscall(NVIC_SYSH_SVCALL_PRIORITY);
#endif

	/* If the MPU is enabled, then attach and enable the Memory Management
	 * Fault handler.
	 */

#ifdef CONFIG_ARMV7M_MPU
	irq_attach(IMXRT_IRQ_MEMFAULT, up_memfault, NULL);
	up_enable_irq(IMXRT_IRQ_MEMFAULT);
#endif

	/* Attach all other processor exceptions (except reset and sys tick) */

#ifdef CONFIG_DEBUG_FEATURES
	irq_attach(IMXRT_IRQ_NMI, imxrt_nmi, NULL);
#ifndef CONFIG_ARMV7M_MPU
	irq_attach(IMXRT_IRQ_MEMFAULT, up_memfault, NULL);
#endif
	irq_attach(IMXRT_IRQ_BUSFAULT, imxrt_busfault, NULL);
	irq_attach(IMXRT_IRQ_USAGEFAULT, imxrt_usagefault, NULL);
	irq_attach(IMXRT_IRQ_PENDSV, imxrt_pendsv, NULL);
	irq_attach(IMXRT_IRQ_DBGMONITOR, imxrt_dbgmonitor, NULL);
	irq_attach(IMXRT_IRQ_RESERVED, imxrt_reserved, NULL);
#endif

	imxrt_dumpnvic("initial", NR_IRQS);

	/* If a debugger is connected, try to prevent it from catching hardfaults.
	 * If CONFIG_ARMV7M_USEBASEPRI, no hardfaults are expected in normal
	 * operation.
	 */

#if defined(CONFIG_DEBUG_SYMBOLS) && !defined(CONFIG_ARMV7M_USEBASEPRI)
	regval = getreg32(NVIC_DEMCR);
	regval &= ~NVIC_DEMCR_VCHARDERR;
	putreg32(regval, NVIC_DEMCR);
#endif

#ifndef CONFIG_SUPPRESS_INTERRUPTS
	/* Initialize logic to support a second level of interrupt decoding for
	 * GPIO pins.
	 */

#ifdef CONFIG_IMXRT_GPIO_IRQ
	imxrt_gpioirq_initialize();
#endif

	/* And finally, enable interrupts */

	irqenable();
#endif
}

void up_disable_irq(int irq)
{
	uintptr_t regaddr;
	uint32_t regval;
	uint32_t bit;

	if (imxrt_irqinfo(irq, &regaddr, &bit, NVIC_CLRENA_OFFSET) == 0) {
		/* Modify the appropriate bit in the register to disable the interrupt.
		 * For normal interrupts, we need to set the bit in the associated
		 * Interrupt Clear Enable register.  For other exceptions, we need to
		 * clear the bit in the System Handler Control and State Register.
		 */

		if (irq >= IMXRT_IRQ_EXTINT) {
			putreg32(bit, regaddr);
		} else {
			regval = getreg32(regaddr);
			regval &= ~bit;
			putreg32(regval, regaddr);
		}
	}
#ifdef CONFIG_IMXRT_GPIO_IRQ
	else {
		/* Maybe it is a (derived) GPIO IRQ */

		imxrt_gpioirq_disable(irq);
	}
#endif

#if 0							/* Might be useful in early bring-up */
	imxrt_dumpnvic("disable", irq);
#endif
}

void up_enable_irq(int irq)
{
	uintptr_t regaddr;
	uint32_t regval;
	uint32_t bit;

	if (imxrt_irqinfo(irq, &regaddr, &bit, NVIC_ENA_OFFSET) == 0) {
		/* Modify the appropriate bit in the register to enable the interrupt.
		 * For normal interrupts, we need to set the bit in the associated
		 * Interrupt Set Enable register.  For other exceptions, we need to
		 * set the bit in the System Handler Control and State Register.
		 */

		if (irq >= IMXRT_IRQ_EXTINT) {
			putreg32(bit, regaddr);
		} else {
			regval = getreg32(regaddr);
			regval |= bit;
			putreg32(regval, regaddr);
		}
	}
#ifdef CONFIG_IMXRT_GPIO_IRQ
	else {
		/* Maybe it is a (derived) GPIO IRQ */

		imxrt_gpioirq_enable(irq);
	}
#endif

#if 0							/* Might be useful in early bring-up */
	imxrt_dumpnvic("enable", irq);
#endif
}

int up_prioritize_irq(int irq, int priority)
{
	uint32_t regaddr;
	uint32_t regval;
	int shift;

	DEBUGASSERT(irq >= IMXRT_IRQ_MEMFAULT && irq < NR_IRQS && (unsigned)priority <= NVIC_SYSH_PRIORITY_MIN);

	if (irq < IMXRT_IRQ_EXTINT) {
		/* NVIC_SYSH_PRIORITY() maps {0..15} to one of three priority
		 * registers (0-3 are invalid)
		 */

		regaddr = NVIC_SYSH_PRIORITY(irq);
		irq -= 4;
	} else {
		/* NVIC_IRQ_PRIORITY() maps {0..} to one of many priority registers */

		irq -= IMXRT_IRQ_EXTINT;
		regaddr = NVIC_IRQ_PRIORITY(irq);
	}

	regval = getreg32(regaddr);
	shift = ((irq & 3) << 3);
	regval &= ~(0xff << shift);
	regval |= (priority << shift);
	putreg32(regval, regaddr);

	imxrt_dumpnvic("prioritize", irq);
	return OK;
}
