==> Samsung/TizenRT/os/arch/arm/src/stm32/stm32_irq.c <==
#include <tinyara/config.h>
#include <stdint.h>
#include <debug.h>
#include <tinyara/irq.h>
#include <tinyara/arch.h>
#include <arch/irq.h>
#include "nvic.h"
#include "ram_vectors.h"
#include "up_arch.h"
#include "up_internal.h"
#include "stm32.h"
#define DEFPRIORITY32 \
	(NVIC_SYSH_PRIORITY_DEFAULT << 24 |\
	 NVIC_SYSH_PRIORITY_DEFAULT << 16 |\
	 NVIC_SYSH_PRIORITY_DEFAULT << 8  |\
	 NVIC_SYSH_PRIORITY_DEFAULT)
#define NVIC_ENA_OFFSET    (0)
#define NVIC_CLRENA_OFFSET (NVIC_IRQ0_31_CLEAR - NVIC_IRQ0_31_ENABLE)

static int stm32_irqinfo(int irq, uintptr_t *regaddr, uint32_t *bit, uintptr_t offset)
{
	DEBUGASSERT(irq >= STM32_IRQ_NMI && irq < NR_IRQS);

	/* Check for external interrupt */

	if (irq >= STM32_IRQ_INTERRUPTS) {
		if (irq < STM32_IRQ_INTERRUPTS + 32) {
			*regaddr = (NVIC_IRQ0_31_ENABLE + offset);
			*bit = 1 << (irq - STM32_IRQ_INTERRUPTS);
		} else if (irq < STM32_IRQ_INTERRUPTS + 64) {
			*regaddr = (NVIC_IRQ32_63_ENABLE + offset);
			*bit = 1 << (irq - STM32_IRQ_INTERRUPTS - 32);
		} else if (irq < NR_IRQS) {
			*regaddr = (NVIC_IRQ64_95_ENABLE + offset);
			*bit = 1 << (irq - STM32_IRQ_INTERRUPTS - 64);
		} else {
			return ERROR;		/* Invalid interrupt */
		}
	}

	/* Handle processor exceptions.  Only a few can be disabled */

	else {
		*regaddr = NVIC_SYSHCON;
		if (irq == STM32_IRQ_MEMFAULT) {
			*bit = NVIC_SYSHCON_MEMFAULTENA;
		} else if (irq == STM32_IRQ_BUSFAULT) {
			*bit = NVIC_SYSHCON_BUSFAULTENA;
		} else if (irq == STM32_IRQ_USAGEFAULT) {
			*bit = NVIC_SYSHCON_USGFAULTENA;
		} else if (irq == STM32_IRQ_SYSTICK) {
			*regaddr = NVIC_SYSTICK_CTRL;
			*bit = NVIC_SYSTICK_CTRL_ENABLE;
		} else {
			return ERROR;		/* Invalid or unsupported exception */
		}
	}

	return OK;
}

void up_irqinitialize(void)
{
	uint32_t regaddr;
	int num_priority_registers;

	/* Disable all interrupts */

	putreg32(0, NVIC_IRQ0_31_ENABLE);
	putreg32(0, NVIC_IRQ32_63_ENABLE);

	/* Colorize the interrupt stack for debug purposes */

#if defined(CONFIG_STACK_COLORATION) && CONFIG_ARCH_INTERRUPTSTACK > 3
	{
		size_t intstack_size = (CONFIG_ARCH_INTERRUPTSTACK & ~3);
		up_stack_color((FAR void *)((uintptr_t)&g_intstackbase - intstack_size), intstack_size);
	}
#endif

	/* The standard location for the vector table is at the beginning of FLASH
	 * at address 0x0800:0000.  If we are using the STMicro DFU bootloader, then
	 * the vector table will be offset to a different location in FLASH and we
	 * will need to set the NVIC vector location to this alternative location.
	 *
	 * If CONFIG_ARCH_RAMVECTORS is defined, then we are using a RAM-based
	 * vector table that requires special initialization.
	 */

#if defined(CONFIG_ARCH_RAMVECTORS)
	up_ramvec_initialize();
#elif defined(CONFIG_STM32_SBL)
	putreg32((uint32_t)_vectors, NVIC_VECTAB);
#endif

	/* Set all interrupts (and exceptions) to the default priority */

	putreg32(DEFPRIORITY32, NVIC_SYSH4_7_PRIORITY);
	putreg32(DEFPRIORITY32, NVIC_SYSH8_11_PRIORITY);
	putreg32(DEFPRIORITY32, NVIC_SYSH12_15_PRIORITY);

	/* The NVIC ICTR register (bits 0-4) holds the number of of interrupt
	 * lines that the NVIC supports:
	 *
	 *  0 -> 32 interrupt lines,  8 priority registers
	 *  1 -> 64 "       " "   ", 16 priority registers
	 *  2 -> 96 "       " "   ", 32 priority registers
	 *  ...
	 */

	num_priority_registers = (getreg32(NVIC_ICTR) + 1) * 8;

	/* Now set all of the interrupt lines to the default priority */

	regaddr = NVIC_IRQ0_3_PRIORITY;
	while (num_priority_registers--) {
		putreg32(DEFPRIORITY32, regaddr);
		regaddr += 4;
	}

	/* currents_regs is non-NULL only while processing an interrupt */

	current_regs = NULL;

	/* Attach the SVCall and Hard Fault exception handlers.  The SVCall
	 * exception is used for performing context switches; The Hard Fault
	 * must also be caught because a SVCall may show up as a Hard Fault
	 * under certain conditions.
	 */

	irq_attach(STM32_IRQ_SVCALL, up_svcall, NULL);
	irq_attach(STM32_IRQ_HARDFAULT, up_hardfault, NULL);

	/* Set the priority of the SVCall interrupt */

#ifdef CONFIG_ARCH_IRQPRIO
	/* up_prioritize_irq(STM32_IRQ_PENDSV, NVIC_SYSH_PRIORITY_MIN); */
#endif
#ifdef CONFIG_ARMV7M_USEBASEPRI
	stm32_prioritize_syscall(NVIC_SYSH_SVCALL_PRIORITY);
#endif

	/* If the MPU is enabled, then attach and enable the Memory Management
	 * Fault handler.
	 */

#ifdef CONFIG_ARMV7M_MPU
	irq_attach(STM32_IRQ_MEMFAULT, up_memfault, NULL);
	up_enable_irq(STM32_IRQ_MEMFAULT);
#endif

	/* Attach all other processor exceptions (except reset and sys tick) */

#ifdef CONFIG_DEBUG
	irq_attach(STM32_IRQ_NMI, stm32_nmi, NULL);
#ifndef CONFIG_ARMV7M_MPU
	irq_attach(STM32_IRQ_MEMFAULT, up_memfault, NULL);
#endif
	irq_attach(STM32_IRQ_BUSFAULT, stm32_busfault, NULL);
	irq_attach(STM32_IRQ_USAGEFAULT, stm32_usagefault, NULL);
	irq_attach(STM32_IRQ_PENDSV, stm32_pendsv, NULL);
	irq_attach(STM32_IRQ_DBGMONITOR, stm32_dbgmonitor, NULL);
	irq_attach(STM32_IRQ_RESERVED, stm32_reserved, NULL);
#endif

	stm32_dumpnvic("initial", NR_IRQS);

#ifndef CONFIG_SUPPRESS_INTERRUPTS

	/* And finally, enable interrupts */

	irqenable();
#endif
}

void up_disable_irq(int irq)
{
	uintptr_t regaddr;
	uint32_t regval;
	uint32_t bit;

	if (stm32_irqinfo(irq, &regaddr, &bit, NVIC_CLRENA_OFFSET) == 0) {
		/* Modify the appropriate bit in the register to disable the interrupt.
		 * For normal interrupts, we need to set the bit in the associated
		 * Interrupt Clear Enable register.  For other exceptions, we need to
		 * clear the bit in the System Handler Control and State Register.
		 */

		if (irq >= STM32_IRQ_INTERRUPTS) {
			putreg32(bit, regaddr);
		} else {
			regval = getreg32(regaddr);
			regval &= ~bit;
			putreg32(regval, regaddr);
		}
	}
	// stm32_dumpnvic("disable", irq);
}

void up_enable_irq(int irq)
{
	uintptr_t regaddr;
	uint32_t regval;
	uint32_t bit;

	if (stm32_irqinfo(irq, &regaddr, &bit, NVIC_ENA_OFFSET) == 0) {
		/* Modify the appropriate bit in the register to enable the interrupt.
		 * For normal interrupts, we need to set the bit in the associated
		 * Interrupt Set Enable register.  For other exceptions, we need to
		 * set the bit in the System Handler Control and State Register.
		 */

		if (irq >= STM32_IRQ_INTERRUPTS) {
			putreg32(bit, regaddr);
		} else {
			regval = getreg32(regaddr);
			regval |= bit;
			putreg32(regval, regaddr);
		}
	}
	// stm32_dumpnvic("enable", irq);
}

int up_prioritize_irq(int irq, int priority)
{
	uint32_t regaddr;
	uint32_t regval;
	int shift;

	DEBUGASSERT(irq >= STM32_IRQ_MEMFAULT && irq < NR_IRQS && (unsigned)priority <= NVIC_SYSH_PRIORITY_MIN);

	if (irq < STM32_IRQ_INTERRUPTS) {
		/* NVIC_SYSH_PRIORITY() maps {0..15} to one of three priority
		 * registers (0-3 are invalid)
		 */

		regaddr = NVIC_SYSH_PRIORITY(irq);
		irq -= 4;
	} else {
		/* NVIC_IRQ_PRIORITY() maps {0..} to one of many priority registers */

		irq -= STM32_IRQ_INTERRUPTS;
		regaddr = NVIC_IRQ_PRIORITY(irq);
	}

	regval = getreg32(regaddr);
	shift = ((irq & 3) << 3);
	regval &= ~(0xff << shift);
	regval |= (priority << shift);
	putreg32(regval, regaddr);

	stm32_dumpnvic("prioritize", irq);
	return OK;
}
